--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/w175621/opt/miniconda3/envs/py3/bin/python"
+    "python.pythonPath": "/usr/local/opt/python@3.9/bin/python3.9"
 }
